--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
   </head>
   <body>
-      <a href="https://twitter.com/i/oauth2/authorize?response_type=code&client_id={{ client_id }}&redirect_uri=http://localhost:5000/redirect&scope=tweet.read%20tweet.write%20users.read%20offline.access&state=state&code_challenge=challenge&code_challenge_method=plain">authorize</a>
+      <a href="https://twitter.com/i/oauth2/authorize?response_type=code&client_id={{ client_id }}&redirect_uri={{ redirect_uri }}&scope=tweet.read%20tweet.write%20users.read%20offline.access&state=state&code_challenge=challenge&code_challenge_method=plain" class="button primary">Authorize</a>
   </body>
 </html>
 
